[package]
name = "multithread_get_comparison"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2.0"
reqwest = "0.11.11"
tokio = { version = "1.20.0", features = ["full"] }
futures = "0.3.21"
sled = "0.34.7"
extreme = "666.666.666666"
anyhow = "1.0.58"
serde = { version = "1.0.140", features = ["derive"] }
serde_derive = "1.0.140"
serde_json = "1.0.82"
flume = "0.10.13"
itertools = "0.10.3"


[dependencies.rocksdb]
version = "0.18.0"
default-features = false
features = ["lz4"]
